--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(NAor0)
 export(NFref)
 export(OneRep)
 export(Project)
+export(ProjectMOM)
 export(Rcontrol)
 export(Rcontrol2)
 export(Replace)
