development of CDFW case studies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,7 +118,9 @@ export(Simulate)
 export(SimulateMOM)
 export(SubOM)
 export(TACfilter)
+export(XL2Fleet)
 export(XL2OM)
+export(XL2Stock)
 export(YPR)
 export(YPR_)
 export(YPR_CC)
