more updates to multiMSE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,6 +142,7 @@ export(getEffhist)
 export(getfifth)
 export(getmov2)
 export(getr)
+export(getsel)
 export(iVB)
 export(makeMeanMP)
 export(matlenlim)
