--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(SPSRAopt)
 export(SPmod)
 export(SPslope)
 export(SS2MOM)
+export(SS2OM)
 export(STY)
 export(SampleCpars)
 export(SampleFleetPars)
