To get herring MOM working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,6 +132,7 @@ export(SPSRA_ML)
 export(SPSRAopt)
 export(SPmod)
 export(SPslope)
+export(SS2Data)
 export(SS2MOM)
 export(SS2OM)
 export(STY)
@@ -253,7 +254,9 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
@@ -316,6 +319,7 @@ importFrom(methods,slot)
 importFrom(methods,slotNames)
 importFrom(mvtnorm,rmvnorm)
 importFrom(parallel,detectCores)
+importFrom(reshape2,melt)
 importFrom(snowfall,sfClusterEval)
 importFrom(snowfall,sfExport)
 importFrom(snowfall,sfExportAll)
