--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,12 +24,14 @@ export(CC2)
 export(CC3)
 export(CC4)
 export(CC5)
+export(CSRA)
 export(CalcMPDynamics)
 export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
 export(ChooseSelect)
 export(Converge)
+export(Convert)
 export(Cplot)
 export(CurC)
 export(DAAC)
@@ -39,9 +41,12 @@ export(DCAC_)
 export(DCAC_40)
 export(DCAC_ML)
 export(DCACs)
+export(DLMenv)
+export(DLMextra)
 export(DTe40)
 export(DTe50)
 export(Data2csv)
+export(DataDir)
 export(DepF)
 export(Dom)
 export(DynF)
@@ -112,7 +117,10 @@ export(LtargetE1)
 export(LtargetE4)
 export(MCD)
 export(MCD4010)
+export(ML2D)
 export(MPStats)
+export(MPtype)
+export(MPurl)
 export(MRnoreal)
 export(MRreal)
 export(MSYCalcs)
@@ -136,6 +144,7 @@ export(Rcontrol)
 export(Rcontrol2)
 export(RealFease)
 export(Replace)
+export(Required)
 export(SBT1)
 export(SBT2)
 export(SPMSY)
@@ -190,6 +199,7 @@ export(betaconv)
 export(calcMean)
 export(calcProb)
 export(calcRefYield)
+export(cheatsheets)
 export(checkMSE)
 export(curE)
 export(curE75)
@@ -214,6 +224,7 @@ export(joinMSE)
 export(join_plots)
 export(load.iscam.files)
 export(makeMeanMP)
+export(makePerf)
 export(makeTransparent)
 export(matlenlim)
 export(matlenlim2)
@@ -227,6 +238,7 @@ export(plot.Data)
 export(plot.MSE)
 export(plot.pars)
 export(plotFleet)
+export(plotFun)
 export(plotImp)
 export(plotM)
 export(plotMPA)
@@ -253,6 +265,8 @@ export(slotlim)
 export(tdlnorm)
 export(tinyErr)
 export(trlnorm)
+export(updateMSE)
+export(userguide)
 export(validcpars)
 export(wormplot)
 exportClasses(Data)
