--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(SPslope)
 export(SS2Data)
 export(SS2MOM)
 export(SS2OM)
+export(SSBrefplot)
 export(STY)
 export(SampleCpars)
 export(SampleFleetPars)
