update help manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(CC4)
 export(CC5)
 export(CSRA)
 export(CalcMPDynamics)
+export(Can)
+export(Cant)
 export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
@@ -41,12 +43,14 @@ export(DCAC_)
 export(DCAC_40)
 export(DCAC_ML)
 export(DCACs)
+export(DLMdiag)
 export(DLMenv)
 export(DLMextra)
 export(DTe40)
 export(DTe50)
 export(Data2csv)
 export(DataDir)
+export(DataInit)
 export(DepF)
 export(Dom)
 export(DynF)
@@ -79,6 +83,7 @@ export(ITM)
 export(IT_)
 export(ITe10)
 export(ITe5)
+export(Input)
 export(Iratio)
 export(Islope1)
 export(Islope2)
@@ -128,6 +133,7 @@ export(NAor0)
 export(NFref)
 export(NOAA_plot)
 export(NOAA_plot2)
+export(Needed)
 export(OneRep)
 export(P10)
 export(P100)
@@ -144,6 +150,7 @@ export(Rcontrol)
 export(Rcontrol2)
 export(RealFease)
 export(Replace)
+export(Report)
 export(Required)
 export(SBT1)
 export(SBT2)
@@ -164,11 +171,13 @@ export(SampleFleetPars)
 export(SampleImpPars)
 export(SampleObsPars)
 export(SampleStockPars)
+export(Sense)
 export(Simulate)
 export(SimulateMOM)
 export(SketchFun)
 export(Sub)
 export(SubOM)
+export(TAC)
 export(TACfilter)
 export(Tplot)
 export(Tplot2)
@@ -178,11 +187,13 @@ export(Tplot_old)
 export(TradePlot)
 export(TradePlot_old)
 export(Turing)
+export(Uses)
 export(VOI)
 export(VOI2)
 export(VOIplot)
 export(VOIplot2)
 export(VPA2OM)
+export(XL2Data)
 export(XL2Fleet)
 export(XL2OM)
 export(XL2Stock)
@@ -221,6 +232,7 @@ export(iSCAM2OM)
 export(iSCAMcomps)
 export(iSCAMinds)
 export(iVB)
+export(joinData)
 export(joinMSE)
 export(join_plots)
 export(load.iscam.files)
@@ -232,6 +244,7 @@ export(matlenlim2)
 export(mconv)
 export(minlenLopt1)
 export(movfit_Rcpp)
+export(multiMSE)
 export(multidebug)
 export(optCPU)
 export(optMSY_eq)
@@ -243,6 +256,7 @@ export(plotFun)
 export(plotImp)
 export(plotM)
 export(plotMPA)
+export(plotOFL)
 export(plotOM)
 export(plotObs)
 export(plotSelect)
@@ -258,6 +272,7 @@ export(read.par.file)
 export(read.projection.file)
 export(read.report.file)
 export(replic8)
+export(runMP)
 export(runMSE)
 export(sample_steepness2)
 export(sdconv)
