--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,9 @@ export(Itarget_)
 export(Itargeteff_)
 export(Kplot)
 export(L95target)
+export(LBSPR)
 export(LBSPR_)
+export(LBSPR_MLL)
 export(LTY)
 export(Lratio_BHI)
 export(Lratio_BHI2)
