--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 S3method(barplot,MSE)
 S3method(boxplot,Data)
+S3method(plot,Data)
 S3method(plot,Fleet)
 S3method(plot,Hist)
 S3method(plot,Imp)
+S3method(plot,MSE)
 S3method(plot,OM)
 S3method(plot,Obs)
 S3method(plot,Stock)
 S3method(plot,character)
+S3method(plot,pars)
 export(AAVE)
 export(AAVY)
 export(AvC)
@@ -32,6 +35,7 @@ export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
 export(ChooseSelect)
+export(CombineMMP)
 export(Converge)
 export(Convert)
 export(Cplot)
@@ -64,7 +68,6 @@ export(Fdem_)
 export(Fdem_CC)
 export(Fdem_ML)
 export(Fease)
-export(FilterSmooth)
 export(Fratio)
 export(Fratio4010)
 export(Fratio_)
@@ -103,9 +106,6 @@ export(Itarget_)
 export(Itargeteff_)
 export(Kplot)
 export(L95target)
-export(LBSPR)
-export(LBSPR_)
-export(LBSPR_MLL)
 export(LTY)
 export(Lratio_BHI)
 export(Lratio_BHI2)
@@ -193,7 +193,6 @@ export(Uses)
 export(VOI)
 export(VOI2)
 export(VOIplot)
-export(VOIplot2)
 export(VPA2OM)
 export(XL2Data)
 export(XL2Fleet)
@@ -225,12 +224,12 @@ export(fetch.file.names)
 export(genSizeCompWrap)
 export(getEffhist)
 export(getfifth)
+export(getfirstlev)
 export(getmov2)
 export(getr)
 export(getsel)
 export(hist2)
 export(iSCAM2Data)
-export(iSCAM2OM)
 export(iSCAMcomps)
 export(iSCAMinds)
 export(iVB)
@@ -250,9 +249,6 @@ export(multiMSE)
 export(multidebug)
 export(optCPU)
 export(optMSY_eq)
-export(plot.Data)
-export(plot.MSE)
-export(plot.pars)
 export(plotFleet)
 export(plotFun)
 export(plotImp)
@@ -274,6 +270,7 @@ export(read.par.file)
 export(read.projection.file)
 export(read.report.file)
 export(replic8)
+export(runInMP)
 export(runMP)
 export(runMSE)
 export(sample_steepness2)
@@ -416,6 +413,8 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(stats,simulate)
+importFrom(stats,weighted.mean)
 importFrom(stats,window)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
