--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(Tplot_old)
 export(TradePlot)
 export(TradePlot_old)
 export(Turing)
+export(TuringMOM)
 export(Uses)
 export(VOI)
 export(VOI2)
