updates for CRAN checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,8 +43,8 @@ export(Input)
 export(Kplot)
 export(LTY)
 export(ML2D)
-export(MPStats)
 export(MPtype)
+export(MPurl)
 export(MSYCalcs)
 export(NAor0)
 export(NFref)
@@ -113,6 +113,7 @@ export(calcRefYield)
 export(cheatsheets)
 export(checkMSE)
 export(cv)
+export(derive_beta_par)
 export(fetch.file.names)
 export(genSizeCompWrap)
 export(getEffhist)
@@ -150,6 +151,7 @@ export(replic8)
 export(runInMP)
 export(runMP)
 export(runMSE)
+export(sample_steepness2)
 export(sdconv)
 export(setup)
 export(tdlnorm)
