--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(Replace)
 export(Report)
 export(Required)
 export(SS2Data)
+export(SS2DataMOM)
 export(SS2MOM)
 export(SS2OM)
 export(SSBrefplot)
@@ -246,7 +247,6 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,slotNames)
-importFrom(mvtnorm,rmvnorm)
 importFrom(parallel,detectCores)
 importFrom(reshape2,melt)
 importFrom(snowfall,sfClusterEval)
