Remove export for a bunch of functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,21 +14,17 @@ S3method(plot,character)
 S3method(plot,pars)
 export(AAVE)
 export(AAVY)
-export(BlankSelPlot)
 export(CALsimp)
-export(CSRA)
-export(CalcMPDynamics)
 export(Can)
 export(Cant)
 export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
 export(ChooseSelect)
-export(CombineMMP)
 export(Converge)
 export(Cplot)
+export(DLMDataDir)
 export(DLMdiag)
-export(DLMenv)
 export(DLMextra)
 export(Data2csv)
 export(DataDir)
@@ -84,13 +80,11 @@ export(SketchFun)
 export(Sub)
 export(SubOM)
 export(TAC)
+export(TACfilter)
 export(Tplot)
 export(Tplot2)
-export(Tplot2_old)
 export(Tplot3)
-export(Tplot_old)
 export(TradePlot)
-export(TradePlot_old)
 export(Turing)
 export(TuringMOM)
 export(Uses)
@@ -109,16 +103,11 @@ export(avail)
 export(betaconv)
 export(calcMean)
 export(calcProb)
-export(calcRefYield)
 export(cheatsheets)
 export(checkMSE)
 export(cv)
 export(derive_beta_par)
 export(fetch.file.names)
-export(genSizeCompWrap)
-export(getEffhist)
-export(getfifth)
-export(getfirstlev)
 export(getmov2)
 export(getsel)
 export(iSCAM2Data)
@@ -127,7 +116,6 @@ export(iSCAMinds)
 export(joinData)
 export(join_plots)
 export(load.iscam.files)
-export(makePerf)
 export(makeTransparent)
 export(mconv)
 export(movfit_Rcpp)
@@ -139,8 +127,6 @@ export(plotFun)
 export(plotOFL)
 export(plotmulti)
 export(plotquant)
-export(popdynCPP)
-export(popdynOneTScpp)
 export(read.control.file)
 export(read.data.file)
 export(read.mcmc)
