more changes for movement-at-age

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ export(join_plots)
 export(load.iscam.files)
 export(makeTransparent)
 export(mconv)
+export(movestockCPP)
 export(movfit_Rcpp)
 export(multiMSE)
 export(multidebug)
