Add movement function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ export(joinData)
 export(join_plots)
 export(load.iscam.files)
 export(makeTransparent)
+export(makemov)
 export(mconv)
 export(movestockCPP)
 export(movfit_Rcpp)
@@ -126,6 +127,7 @@ export(optCPU)
 export(optMSY_eq)
 export(plotFun)
 export(plotOFL)
+export(plot_mov)
 export(plotmulti)
 export(plotquant)
 export(read.control.file)
@@ -141,6 +143,7 @@ export(runMSE)
 export(sample_steepness2)
 export(sdconv)
 export(setup)
+export(simmov)
 export(tdlnorm)
 export(tinyErr)
 export(trlnorm)
