add DFO plots from old version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,13 @@ S3method(plot,pars)
 export(AAVE)
 export(AAVY)
 export(CALsimp)
+export(COSEWIC_Blow)
+export(COSEWIC_Dplot)
+export(COSEWIC_Hplot)
+export(COSEWIC_Pplot)
+export(COSEWIC_report)
+export(COSEWIC_tab)
+export(COSEWIC_tab_formatted)
 export(Can)
 export(Cant)
 export(ChkYrs)
@@ -22,7 +29,18 @@ export(ChooseEffort)
 export(ChooseM)
 export(ChooseSelect)
 export(Converge)
+export(Cos_thresh_tab)
 export(Cplot)
+export(DFO_bar)
+export(DFO_hist)
+export(DFO_plot)
+export(DFO_plot2)
+export(DFO_proj)
+export(DFO_quant)
+export(DFO_report)
+export(DFO_spider)
+export(DFO_tab)
+export(DFO_tab_formatted)
 export(DLMDataDir)
 export(DLMdiag)
 export(DLMextra)
@@ -78,9 +96,11 @@ export(Simulate)
 export(SimulateMOM)
 export(SketchFun)
 export(Sub)
+export(SubCpars)
 export(SubOM)
 export(TAC)
 export(TACfilter)
+export(Thresh_tab)
 export(Tplot)
 export(Tplot2)
 export(Tplot3)
@@ -137,6 +157,7 @@ export(read.par.file)
 export(read.projection.file)
 export(read.report.file)
 export(replic8)
+export(runCOSEWIC)
 export(runInMP)
 export(runMP)
 export(runMSE)
