Add joinMSE and joinHist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,8 @@ export(iSCAM2Data)
 export(iSCAMcomps)
 export(iSCAMinds)
 export(joinData)
+export(joinHist)
+export(joinMSE)
 export(join_plots)
 export(load.iscam.files)
 export(makeTransparent)
