--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(COSEWIC_Pplot)
 export(COSEWIC_report)
 export(COSEWIC_tab)
 export(COSEWIC_tab_formatted)
+export(CSRA)
 export(Can)
 export(Cant)
 export(ChkYrs)
@@ -284,6 +285,7 @@ importFrom(stats,loess)
 importFrom(stats,loess.smooth)
 importFrom(stats,median)
 importFrom(stats,nlm)
+importFrom(stats,nlminb)
 importFrom(stats,nls)
 importFrom(stats,optim)
 importFrom(stats,optimise)
