--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(SS2DataMOM)
 export(SS2MOM)
 export(SS2OM)
 export(SSBrefplot)
+export(SSMOM2OM)
 export(STY)
 export(SampleCpars)
 export(SampleFleetPars)
@@ -150,6 +151,7 @@ export(optCPU)
 export(optMSY_eq)
 export(plotFun)
 export(plotOFL)
+export(plot_SS2OM)
 export(plot_mov)
 export(plotmulti)
 export(plotquant)
