add LH2OM and othr functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(FMSYref75)
 export(Fease)
 export(Input)
 export(Kplot)
+export(LH2OM)
 export(LTY)
 export(ML2D)
 export(MPtype)
@@ -155,6 +156,7 @@ export(plot_SS2OM)
 export(plot_mov)
 export(plotmulti)
 export(plotquant)
+export(predictLH)
 export(read.control.file)
 export(read.data.file)
 export(read.mcmc)
