add tests and OMdoc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(DLMextra)
 export(Data2csv)
 export(DataDir)
 export(DataInit)
+export(Data_xl)
 export(Dom)
 export(FMSYref)
 export(FMSYref50)
@@ -66,6 +67,9 @@ export(NFref)
 export(NOAA_plot)
 export(NOAA_plot2)
 export(Needed)
+export(OMdoc)
+export(OMexample)
+export(OMinit)
 export(OneRep)
 export(P10)
 export(P100)
@@ -132,6 +136,7 @@ export(derive_beta_par)
 export(fetch.file.names)
 export(getmov2)
 export(getsel)
+export(hist2)
 export(iSCAM2Data)
 export(iSCAMcomps)
 export(iSCAMinds)
