export iSCAM2OM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ export(getmov2)
 export(getsel)
 export(hist2)
 export(iSCAM2Data)
+export(iSCAM2OM)
 export(iSCAMcomps)
 export(iSCAMinds)
 export(joinData)
