--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,6 @@ export(DFO_tab)
 export(DFO_tab_formatted)
 export(DLMDataDir)
 export(DLMdiag)
-export(DLMextra)
 export(Data2csv)
 export(DataDir)
 export(DataInit)
@@ -61,6 +60,7 @@ export(LTY)
 export(ML2D)
 export(MPtype)
 export(MPurl)
+export(MSEextra)
 export(MSYCalcs)
 export(NAor0)
 export(NFref)
