--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(betaconv)
 export(calcMean)
 export(calcProb)
 export(checkMSE)
+export(curEref)
 export(cv)
 export(derive_beta_par)
 export(fetch.file.names)
