Add YPR and SPR calcs to OM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,slotNames)
+importFrom(numDeriv,grad)
 importFrom(parallel,detectCores)
 importFrom(snowfall,sfClusterEval)
 importFrom(snowfall,sfExport)
