SS2MOM plots dev

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(optCPU)
 export(optMSY_eq)
 export(plotFun)
 export(plotOFL)
+export(plot_SS2MOM)
 export(plot_SS2OM)
 export(plot_mov)
 export(plotmulti)
