updates for patch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,7 +201,9 @@ exportMethods(tinyErr)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
@@ -215,12 +217,14 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,expand_limits)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplotGrob)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
