--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(
   person("Adrian", "Hordyk", email = "adrian@bluematterscience.com", role = c("aut", "cre")),
   person("Quang", "Huynh", email = "quang@bluematterscience.com", role = "aut"), 
   person("Tom", "Carruthers", email = "tom@bluematterscience.com", role = c("aut")),
-  person("Chris", "Grandin", rol = "ctb", comment = "iSCAM functions"))
+  person("Chris", "Grandin", role = "ctb", comment = "iSCAM functions"))
 Description: Development, simulation testing, and implementation of management procedures for fisheries 
     (see Carruthers & Hordyk (2018) <doi:10.1111/2041-210X.13081>).
 License: GPL-3
