--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ export(makemov)
 export(mconv)
 export(movestockCPP)
 export(movfit_Rcpp)
+export(multiDataS)
 export(multiMSE)
 export(multidebug)
 export(optCPU)
