don't run DLMtool MPs in parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -321,6 +321,7 @@ importFrom(stats,window)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
+importFrom(utils,find)
 importFrom(utils,flush.console)
 importFrom(utils,ls.str)
 importFrom(utils,lsf.str)
