--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(plot,character)
 S3method(plot,pars)
 export(AAVE)
 export(AAVY)
+export(Assess2OM)
 export(Awatea2OM)
 export(CALsimp)
 export(COSEWIC_Blow)
