Methods for making MICE Rel (density-dependent M for now)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ S3method(plot,Obs)
 S3method(plot,Stock)
 S3method(plot,character)
 S3method(plot,pars)
+S3method(predict,Rel)
+S3method(print,Rel)
+S3method(simulate,Rel)
 export(AAVE)
 export(AAVY)
 export(Assess2OM)
@@ -148,6 +151,8 @@ export(joinHist)
 export(joinMSE)
 export(join_plots)
 export(load.iscam.files)
+export(makeMOM)
+export(makeRel)
 export(makeTransparent)
 export(makemov)
 export(mconv)
