--- a/NAMESPACE
+++ b/NAMESPACE
@@ -277,6 +277,7 @@ importFrom(methods,"slot<-")
 importFrom(methods,.hasSlot)
 importFrom(methods,getClassDef)
 importFrom(methods,getSlots)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slot)
