Convert SR par functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,10 +86,13 @@ export(Pplot)
 export(Pplot2)
 export(Project)
 export(ProjectMOM)
+export(R0conv)
 export(RealFease)
 export(Replace)
 export(Report)
 export(Required)
+export(SRalphaconv)
+export(SRbetaconv)
 export(SS2Data)
 export(SS2DataMOM)
 export(SS2MOM)
@@ -141,6 +144,7 @@ export(derive_beta_par)
 export(fetch.file.names)
 export(getmov2)
 export(getsel)
+export(hconv)
 export(hist2)
 export(iSCAM2Data)
 export(iSCAM2OM)
