Add TMB to Suggests for WHAM2OM

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Suggests:
     rmarkdown,
     shiny,
     testthat,
-    tidyr
+    tidyr,
+    TMB
 LinkingTo: Rcpp, RcppArmadillo
 BugReports: https://github.com/Blue-Matter/MSEtool/issues
