Add ASAP2OM to pkg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ S3method(print,Rel)
 S3method(simulate,Rel)
 export(AAVE)
 export(AAVY)
+export(ASAP2Data)
+export(ASAP2OM)
 export(Assess2OM)
 export(Awatea2OM)
 export(CALsimp)
