--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(AAVE)
 export(AAVY)
 export(ASAP2Data)
 export(ASAP2OM)
+export(Assess2MOM)
 export(Assess2OM)
 export(Awatea2OM)
 export(CALsimp)
