Add SubCpars method for MOM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ exportClasses(Stock)
 exportClasses(char.log)
 exportClasses(label.class)
 exportClasses(prob.class)
+exportMethods(SubCpars)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(tinyErr)
