--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,7 @@ export(cv)
 export(derive_beta_par)
 export(fetch.file.names)
 export(getmov2)
+export(getnIVs)
 export(getsel)
 export(hconv)
 export(hist2)
@@ -173,6 +174,7 @@ export(optCPU)
 export(optMSY_eq)
 export(plotFun)
 export(plotOFL)
+export(plotRel)
 export(plot_SS2MOM)
 export(plot_SS2OM)
 export(plot_mov)
@@ -212,6 +214,7 @@ exportClasses(char.log)
 exportClasses(label.class)
 exportClasses(prob.class)
 exportMethods(SubCpars)
+exportMethods(plot)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(tinyErr)
