--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(COSEWIC_tab_formatted)
 export(CSRA)
 export(Can)
 export(Cant)
+export(CheckOM)
 export(ChkYrs)
 export(ChooseEffort)
 export(ChooseM)
