Update addMPs function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(XL2Fleet)
 export(XL2OM)
 export(XL2Stock)
 export(Yield)
+export(addMPs)
 export(alphaconv)
 export(applyMP)
 export(avail)
