--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,6 +262,7 @@ importFrom(grDevices,jpeg)
 importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
+importFrom(grDevices,win.graph)
 importFrom(grDevices,xy.coords)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
