--- a/NAMESPACE
+++ b/NAMESPACE
@@ -256,13 +256,13 @@ importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,gray)
 importFrom(grDevices,jpeg)
 importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
-importFrom(grDevices,win.graph)
 importFrom(grDevices,xy.coords)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
@@ -290,6 +290,7 @@ importFrom(grid,grid.draw)
 importFrom(grid,grid.newpage)
 importFrom(grid,unit)
 importFrom(grid,unit.c)
+importFrom(methods,"formalArgs,")
 importFrom(methods,"slot<-")
 importFrom(methods,.hasSlot)
 importFrom(methods,getClassDef)
