--- a/NAMESPACE
+++ b/NAMESPACE
@@ -290,9 +290,9 @@ importFrom(grid,grid.draw)
 importFrom(grid,grid.newpage)
 importFrom(grid,unit)
 importFrom(grid,unit.c)
-importFrom(methods,"formalArgs,")
 importFrom(methods,"slot<-")
 importFrom(methods,.hasSlot)
+importFrom(methods,formalArgs)
 importFrom(methods,getClassDef)
 importFrom(methods,getSlots)
 importFrom(methods,is)
