--- a/NAMESPACE
+++ b/NAMESPACE
@@ -246,6 +246,8 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplotGrob)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
