Add utils::str to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -357,5 +357,6 @@ importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,setTxtProgressBar)
+importFrom(utils,str)
 importFrom(utils,txtProgressBar)
 useDynLib(MSEtool)
