fix index bug  in genLenComp
- update Rd
-

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(COSEWIC_report)
 export(COSEWIC_tab)
 export(COSEWIC_tab_formatted)
 export(CSRA)
+export(CalcAsymptoticDist)
 export(Can)
 export(Cant)
 export(CheckOM)
@@ -168,6 +169,7 @@ export(makeMOM)
 export(makeRel)
 export(makeTransparent)
 export(makemov)
+export(makemov2)
 export(mconv)
 export(movestockCPP)
 export(movfit_Rcpp)
@@ -200,6 +202,7 @@ export(sample_steepness2)
 export(sdconv)
 export(setup)
 export(simmov)
+export(simmov2)
 export(tdlnorm)
 export(tinyErr)
 export(trlnorm)
