update manual to fix CRAN Notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,6 +276,7 @@ importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,contour)
+importFrom(graphics,grid)
 importFrom(graphics,hist)
 importFrom(graphics,identify)
 importFrom(graphics,layout)
