--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(ASAP2OM)
 export(Assess2MOM)
 export(Assess2OM)
 export(Awatea2OM)
+export(BAM2MOM)
 export(CALsimp)
 export(COSEWIC_Blow)
 export(COSEWIC_Dplot)
