Update NAMESPACE for CRAN check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -330,6 +330,7 @@ importFrom(stats,lm)
 importFrom(stats,loess)
 importFrom(stats,loess.smooth)
 importFrom(stats,median)
+importFrom(stats,na.pass)
 importFrom(stats,nlm)
 importFrom(stats,nlminb)
 importFrom(stats,nls)
