--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,6 +202,7 @@ export(runMP)
 export(runMSE)
 export(sample_steepness2)
 export(sdconv)
+export(select_MP)
 export(setup)
 export(simmov)
 export(simmov2)
