--- a/NAMESPACE
+++ b/NAMESPACE
@@ -209,6 +209,7 @@ export(simmov2)
 export(tdlnorm)
 export(tinyErr)
 export(trlnorm)
+export(tune_MP)
 export(updateMSE)
 export(validcpars)
 export(wormplot)
